app/assets/stylesheets/custom.css.scss
/* mixins, variables, etc. */
@import "bootstrap";
@import "variables";
@import "mixins";
@import "interior_pages";
@import "cards";
@import "leaderboard";
@import "intermediates";
@import "reset";
@import "surveys";
@import "forms";
@import "social_btn";
@import "jackhammer";

@mixin box_sizing {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

/* universal */

html {
  overflow-y: scroll;
}

body {
  padding-top: 0px;
}
.page-background {
  background-image: url(home_screen.jpg);
}
section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
  h1 {
    margin-bottom: 10px;
  }
}

.page-container {
  margin: 0 auto;
  max-width: 83.75em;
  width: 100%;
}
/* typography */

// h1, h2, h3, h4, h5, h6 {
//   line-height: 1;
// }


// h1 {
//   font-size: 3em;
//   letter-spacing: -2px;
//   margin-bottom: 30px;
//   text-align: center;
// }

h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: $grayLight;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}
.nav-dropdown {
  width: 100%;
  display: inline-block;
  bottom: 5px;
  position: relative;
  &.show {
    .nav-dropdown__name {
      .fa-caret-down {
        @include rotate(180deg);
      }
    }
    .nav-dropdown__list {
      box-shadow: 0px 5px 10px rgba(127, 140, 141, 0.5);
      display: block;
      &::after {
        content: '';
        width: 0;
        height: 0;
        border-left: 10px solid transparent;
        border-right: 10px solid transparent;
        border-bottom: 10px solid #fff;
        font-size: 0;
        line-height: 0;
        position: absolute;
        top: -10px;
        margin-left: 50%;
        margin-right: auto;
        left: -10px;
        z-index: 100;
      }
      .interior-page & {
        // box-shadow: 0 5px 10px #D29A5B;
        box-shadow: 0 5px 10px #372850;
      }
    }
  }
}
.header-img--logo {
  display: none;
}
.nav-dropdown__name {
  cursor: pointer;
  color: $white;
  margin: 0 25px;
  display: inline-block;
  position: relative;
  .fa-caret-down {
    margin-right: 5px;
    font-size: 18px;
    @include transition();
    position: relative;
    top: 2px;
  }
}
.nav-dropdown__user-credits {
  font-size: 14px;
  display: inline-block;
  background: $purple-light;
  border-radius: 100px;
  color: $red;
  padding: 10px 20px 10px 50px;
  position: relative;

  &::before {
    content: '';
    position: absolute;
    height: 37px;
    width: 37px;
    background-image: url(purple_credits.png);
    background-size: 105%;
    border-radius: 100%;
    left: 3px;
    top: 3px;
  }
}
.nav-dropdown__avatar {
  background-color: $clouds;
  height: 40px;
  width: 40px;
  border-radius: 100%;
  display: inline-block;
  position: relative;
  top: 14px;
  background-size: 100%;
  background-position: center;
}
.nav-dropdown__list {
  position: absolute;
  top: 75px;
  right: 0;
  list-style: none;
  width: 200px;
  margin: 0;
  text-align: left;
  padding: 10px 20px 20px;
  background: $white;
  display: none;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}
.disclaimer--us-only {
    font-size: $xs;
    text-transform: uppercase;
    color: $blue-steel;
    margin-bottom: 0;

    &.disclaimer--us-only-home {
        color: $dark-gray;
    }
}
.nav-dropdown__item {

  a {
    display: block;
    padding: 5px 0;
    text-decoration: none;
    color: $purple;
    @include transition();
    &:hover {
      color: $purple-light;
    }
  }
  &:first-child {
    border: none;
  }
}
.nav-dropdown__credits {
  float: right;
  color: $red;
  font-size: 12px;
}
.nav-dropdown__signout {
  border-top: 1px solid $clouds;
  margin: 10px 0 0;
  a {
    padding: 10px 10px 0 0;
  }
}
.navigation {
  display: inline-block;
  width: 100%;
  height: 80px;
  background-color: $lavender;
  overflow: visible;
  position: relative;
  z-index: 10;
  .nav-left {
    float: left;
    margin-left: 2.5%;
    @include vertical-align();
  }
  .nav-right {
    display: inline-block;
    text-align: right;
    height: 60px;
    width: 40vw;
    position: absolute !important;
    right: 0;
    margin-right: 5%;
    @include vertical-align();
  }
  .desktop-home & {
    display: none;
  }
  .nav-logo {
    height: 35px;
    width: auto;
  }
  .nav-dropdown {
    & > a {
      color: $white;
      margin-left: 25px;

      &:hover {
        color: $white;
        text-decoration: none;
      }

      .notification {
          top: -15px;
          right: -10px;
          border-radius: 100%;
      }
    }
  }
}
/*deposit*/
.prize {
  font-size: 36px;
  margin-bottom: 30px;
  line-height: 44px;
}

.prizeHome {
  color: #000;
  font-size: 44px;
  margin-bottom: 20px;
  line-height: 44px;
}

#percentHome {
  font-size: 36px;

}

.luckee-balloon {
  position: absolute;
  height: auto;
  width: 35%;
  top: -7.5%;
  right: 15%;
}
.desktop-home {
  &::before {
    content: '';
    position: absolute;
    top: -2px;
    left: -2px;
    background-image: url(/assets/svgs/beta_banner.svg);
    height: 80px;
    width: 80px;
    background-size: 100%;
    background-repeat: no-repeat;
  }
}
/* header */

#logo {
  float: left;
  margin-right: 10px;
  font-size: 54px;
  font-family: Capriola;
  color: white;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 20px;
  padding-left: 20px;
  font-weight: bold;
  line-height: 1;
  &:hover {
    color: white;
    text-decoration: none;
  }
}

.subLogo {
  float: left;
  font-size: 16px;
  padding-left: 60px;
  color: #fff;
}

.navbar-inverse #logo:hover,
.navbar-inverse #logo:focus {
  background-color: transparent;
  color: #999999;
}

/* navbar */

.navbar .navbar-inner{
    background: rgba(255, 255, 255, 0.0);
    height: 80px;
    border: 0;
    box-shadow: none !important;
    -webkit-box-shadow: none !important;
    padding-top: 10px;
}
/* ... */

